fixed cursor on mobile devices

--- a/css/cursor.css
+++ b/css/cursor.css
@@ -26,7 +26,4 @@
   margin-top: -6px;
   margin-left: -5px;
 }
-
-.hidden {
-  display: none;
-}
+ 
